# ARIA

./: ARCHITECTURE.md  CHANGELOG.md  PRIVACY.md  README.md  README.tr.md  ROADMAP.md  SHOWCASE.md
Desktop/Vision/JarvisBrain_v2/: CONTRIBUTING.md  README.md  agent_friday.py  app_new.py  app_qt.py  control_panel.py  pyproject.toml  requirements.txt  test_sprint_1a.py  test_sprint_3.py
Desktop/Vision/JarvisBrain_v2/friday/: __init__.py  brain.py  live_audio.py  memory.py  pipeline.py  stt.py  stt_health.py  tts_engine.py
Desktop/Vision/JarvisBrain_v2/friday/tools/: __init__.py  actions.py  desktop.py  weather.py
Desktop/Vision/JarvisBrain_v2/qt_ui/: Main.qml
