[project]
name = "jarvisbrain-v2-friday"
version = "0.1.0"
description = "Friday-style JarvisBrain v2 integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  # Core MCP / HTTP / config
  "fastmcp",
  "httpx",
  "python-dotenv",
  "ddgs",
  # Voice agent (LiveKit)
  "livekit-agents[deepgram,groq,openai,sarvam,silero]>=1.5.1",
  "livekit-plugins-google>=1.5.1",
  # Desktop UI / window automation
  "pyautogui",
  "pygetwindow",
  "PySide6",
  # STT / TTS / audio I/O
  "SpeechRecognition",
  "pyttsx3",
  "sounddevice",
  "numpy",
  "edge-tts",
  "pygame",
  # System / clipboard / vision
  "psutil",
  "pyperclip",
]

# Platform-specific (kept out of the base list to avoid hard installs on
# non-Windows hosts; install these via requirements.txt or extras).
[project.optional-dependencies]
windows = [
  "pyaudio",
  "pycaw",
]

[project.scripts]
friday = "server:main"
friday_voice = "agent_friday:dev"
friday_ui = "app_qt:run_qt"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
